--- a/backend/advisor/src/main/resources/application.properties
+++ b/backend/advisor/src/main/resources/application.properties
@@ -1,26 +1,28 @@
 #spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/advisor_portal
-spring.datasource.username=root
-spring.datasource.password=ojas123
-logging.level.root=INFO
-logging.file.path=/home/advisor/logs/
-
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/vedic_astrology
-#logging.file.path=C://Mahavastu//logs//vedic_astro
+#spring.datasource.url=jdbc:mysql://localhost:3306/advisor_portal
 #spring.datasource.username=root
-#spring.datasource.password=password
+#spring.datasource.password=ojas123
 #logging.level.root=INFO
+#logging.file.path=C://Mahavastu//logs//vedic_astro
+
+
+spring.datasource.url=jdbc:mariadb://localhost:3307/advisor_portal?useUnicode=true&characterEncoding=UTF-8
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=45
+spring.datasource.hikari.minimum-idle=40
+logging.file.path=/home/advisor/logs/
+spring.datasource.username=vedicastro
+spring.datasource.password=vedicastro
+logging.level.root=INFO
 
 
 
-
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database=mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 hibernate.physical_naming_strategy=com.baeldung.hibernate.namingstrategy.CustomPhysicalNamingStrategy
