--- a/backend/advisor/pom.xml
+++ b/backend/advisor/pom.xml
@@ -33,6 +33,11 @@
 			<version>8.0.15</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 		</dependency>
