--- a/backend/advisor/src/main/resources/application.properties
+++ b/backend/advisor/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/advisor_portal
-spring.datasource.username=root
-spring.datasource.password=ojas123
+spring.datasource.username=vedicastro
+spring.datasource.password=vedicastro
 logging.level.root=INFO
 logging.file.path=C://Mahavastu//logs//vedic_astro
 spring.jpa.database=mysql
